moving ODM configuration into advanced settings section

--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -11,71 +11,79 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <label for="outFileName">Output Product Name Prefix</label>
-            <input [(ngModel)]="config.outFileName" name="outFileName" type="input" class="form-control"
-                placeholder="Output product name prefix..." />
-        </div>
-
-        <div class="form-group">
-            <label for="resolution">Resolution (cm)</label>
-            <input [(ngModel)]="config.resolution" name="resolution" type="number" class="form-control" placeholder="5"
-                step="1" min="0" />
-        </div>
-
-        <div class="form-group">
-            <label for="videoResolution">Maximum output resolution of extracted video frames in pixels</label>
-            <input [(ngModel)]="config.videoResolution" name="videoResolution" type="number" class="form-control"
-                placeholder="4000" step="1" min="0" />
-        </div>
-
-        <div class="form-group">
-            <label for="matcherNeighbors">Matcher Nieghbors</label>
-            <input [(ngModel)]="config.matcherNeighbors" name="matcherNeighbors" type="number" class="form-control"
-                placeholder="0" step="1" min="0" />
-        </div>
-
-        <div class="form-group">
-            <label for="minNumFeatures">Minimum number of features to extract per image</label>
-            <input [(ngModel)]="config.minNumFeatures" name="minNumFeatures" type="number" class="form-control"
-                placeholder="10000" step="1" min="0" />
-        </div>
-
-        <div class="form-group">
-            <label for="pcQuality">Generated point cloud quality</label>
-            <select [(ngModel)]="config.pcQuality" name="pcQuality" class="form-control" >
-                <option value="ULTRA">ULTRA</option>
-                <option value="HIGH">HIGH</option>
-                <option value="MEDIUM">MEDIUM</option>
-                <option value="LOW">LOW</option>
-                <option value="LOWEST">LOWEST</option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <boolean-field [(value)]="config.includeGeoLocationFile"
-                label="Use geo location file when processing (if uploaded)"></boolean-field>
-        </div>
-
-        <div *ngIf="config.includeGeoLocationFile">
-            <p>Geo location file must be called <code>geo.txt</code></p>
-            <p>File format:</p>
-            <pre>
-                <code>
-                projection
-                image_name geo_x geo_y [geo_z] [omega (degrees)] [phi (degrees)] [kappa (degrees)] [horz accuracy (meters)] [vert accuracy (meters)] [extras...]
-                ...
-                </code>
-            </pre>
-            <p>Example:</p>
-            <pre>
-                <code>
-                EPSG:4326
-                DJI_0028.JPG    -91.9942096111111   46.84252125 198.609
-                DJI_0032.JPG    -91.9938293055556   46.8424584444444    198.609
-                </code>        
-            </pre>
-        </div>
+		<button type="button" class="btn btn-default" (click)="isAdvancedSettingsCollapsed = !isAdvancedSettingsCollapsed"
+		        [attr.aria-expanded]="!isAdvancedSettingsCollapsed" aria-controls="collapseBasic">Advanced Settings
+		</button>
+        <div [collapse]="isAdvancedSettingsCollapsed" [isAnimated]="true" style="padding:10px;">
+            <div style="padding:10px;">
+		        <div class="form-group">
+		            <label for="outFileName">Output Product Name Prefix</label>
+		            <input [(ngModel)]="config.outFileName" name="outFileName" type="input" class="form-control"
+		                placeholder="Output product name prefix..." />
+		        </div>
+		
+		        <div *ngIf="config.processOrtho || config.processDem" class="form-group">
+		            <label for="resolution">Orthophoto and DEM Resolution (cm)</label>
+		            <input [(ngModel)]="config.resolution" name="resolution" type="number" class="form-control" placeholder="5"
+		                step="1" min="0" />
+		        </div>
+		
+		<!--         TODO: Determine if this should be removed because IDM doesn't currently process video. -->
+		<!--         <div class="form-group"> -->
+		<!--             <label for="videoResolution">Maximum output resolution of extracted video frames in pixels</label> -->
+		<!--             <input [(ngModel)]="config.videoResolution" name="videoResolution" type="number" class="form-control" -->
+		<!--                 placeholder="4000" step="1" min="0" /> -->
+		<!--         </div> -->
+		
+		        <div *ngIf="config.processOrtho || config.processDem" class="form-group">
+		            <label for="matcherNeighbors">Matcher Nieghbors</label>
+		            <input [(ngModel)]="config.matcherNeighbors" name="matcherNeighbors" type="number" class="form-control"
+		                placeholder="0" step="1" min="0" />
+		        </div>
+		
+		        <div *ngIf="config.processOrtho || config.processDem" class="form-group">
+		            <label for="minNumFeatures">Minimum number of features to extract per image</label>
+		            <input [(ngModel)]="config.minNumFeatures" name="minNumFeatures" type="number" class="form-control"
+		                placeholder="10000" step="1" min="0" />
+		        </div>
+		
+		        <div *ngIf="config.processPtcloud" class="form-group">
+		            <label for="pcQuality">Generated point cloud quality</label>
+		            <select [(ngModel)]="config.pcQuality" name="pcQuality" class="form-control" >
+		                <option value="ULTRA">ULTRA</option>
+		                <option value="HIGH">HIGH</option>
+		                <option value="MEDIUM">MEDIUM</option>
+		                <option value="LOW">LOW</option>
+		                <option value="LOWEST">LOWEST</option>
+		            </select>
+		        </div>
+		
+		        <div *ngIf="config.processOrtho || config.processDem" class="form-group">
+		            <boolean-field [(value)]="config.includeGeoLocationFile"
+		                label="Use geo location file when processing (if uploaded)"></boolean-field>
+		        </div>
+		
+		        <div *ngIf="config.includeGeoLocationFile">
+		            <p>Geo location file must be called <code>geo.txt</code></p>
+		            <p>File format:</p>
+		            <pre>
+		                <code>
+		                projection
+		                image_name geo_x geo_y [geo_z] [omega (degrees)] [phi (degrees)] [kappa (degrees)] [horz accuracy (meters)] [vert accuracy (meters)] [extras...]
+		                ...
+		                </code>
+		            </pre>
+		            <p>Example:</p>
+		            <pre>
+		                <code>
+		                EPSG:4326
+		                DJI_0028.JPG    -91.9942096111111   46.84252125 198.609
+		                DJI_0032.JPG    -91.9938293055556   46.8424584444444    198.609
+		                </code>        
+		            </pre>
+		        </div>
+		    </div>
+	    </div>
 
         <hr />
 
