--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -62,8 +62,16 @@
 		            <boolean-field [(value)]="config.includeGeoLocationFile"
 		                label="Use geo location file when processing (if uploaded)"></boolean-field>
 		        </div>
-		
-		        <div *ngIf="config.includeGeoLocationFile">
+
+				<div class="form-group" *ngIf="config.includeGeoLocationFile">
+					<label for="geoLocationFormat">Geo location file format</label>
+					<select [(ngModel)]="config.geoLocationFormat" name="geoLocationFormat" class="form-control">
+						<option value="RX1R2">RX1R2</option>
+						<option value="ODM">ODM</option>
+					</select>
+				</div>
+	
+		        <div *ngIf="config.includeGeoLocationFile && config.geoLocationFormat === 'ODM'">
 		            <p>Geo location file must be called <code>geo.txt</code></p>
 		            <p>File format:</p>
 		            <pre>
