--- a/uasdm-ui/src/app/site/component/upload.component.html
+++ b/uasdm-ui/src/app/site/component/upload.component.html
@@ -130,6 +130,15 @@
                         <boolean-field [(value)]="values.includeGeoLocationFile"
                             label="Use geo location file when processing (if uploaded)"></boolean-field>
                     </div>
+
+                    <div class="form-group" *ngIf="values.includeGeoLocationFile">
+                        <label for="geoLocationFormat">Geo location file format</label>
+                        <select [(ngModel)]="values.geoLocationFormat" name="geoLocationFormat" class="form-control">
+                            <option value="RX1R2">RX1R2</option>
+                            <option value="ODM">ODM</option>
+                        </select>
+                    </div>
+        
                 </div>
 
                 <!-- Current upload indicator -->
