--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -70,9 +70,14 @@
 						<option value="ODM">ODM</option>
 					</select>
 				</div>
+
+				<div class="form-group" *ngIf="config.includeGeoLocationFile">
+					<label for="geoLocationFileName">Geo location file name</label>
+					<input [(ngModel)]="config.geoLocationFileName" name="geoLocationFileName" type="input" class="form-control"
+						placeholder="File name..." />
+				</div>	
 	
 		        <div *ngIf="config.includeGeoLocationFile && config.geoLocationFormat === 'ODM'">
-		            <p>Geo location file must be called <code>geo.txt</code></p>
 		            <p>File format:</p>
 		            <pre>
 		                <code>
