--- a/uasdm-ui/src/app/site/component/upload.component.html
+++ b/uasdm-ui/src/app/site/component/upload.component.html
@@ -138,7 +138,13 @@
                             <option value="ODM">ODM</option>
                         </select>
                     </div>
-        
+
+                    <div class="form-group" *ngIf="values.includeGeoLocationFile">
+                        <label for="geoLocationFileName">Geo location file name</label>
+                        <input [(ngModel)]="values.geoLocationFileName" name="geoLocationFileName" type="input" class="form-control"
+                            placeholder="File name..." />
+                    </div>
+
                 </div>
 
                 <!-- Current upload indicator -->
