--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -89,6 +89,17 @@
 	                <option value="LOWEST">LOWEST</option>
 	            </select>
 	        </div>
+	        
+	        <div class="form-group">
+	            <label for="featureQuality">Generated feature quality</label>
+	            <select [(ngModel)]="config.featureQuality" name="featureQuality" class="form-control" disabled>
+	                <option value="ULTRA">ULTRA</option>
+	                <option value="HIGH">HIGH</option>
+	                <option value="MEDIUM">MEDIUM</option>
+	                <option value="LOW">LOW</option>
+	                <option value="LOWEST">LOWEST</option>
+	            </select>
+	        </div>
 	
 	        <div class="form-group">
 	            <boolean-field [(value)]="config.includeGeoLocationFile"
