--- a/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
@@ -143,23 +143,27 @@
             <span class="ui-button-text">Close</span>
           </button>
 
-          <button *ngIf="page.index > 0" type="button btn btn-primary" [disabled]="disabled" class="btn btn-secondary"
-            (click)="handleBackPage()">
-            <i class="icon-upload icon-white"></i>
-            Back
-          </button>
-
-          <button *ngIf="page.index < (pages.length - 1)" type="button btn btn-primary"
-            [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleNextPage()">
-            <i class="icon-upload icon-white"></i>
-            Next
-          </button>
-
-          <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary"
-            [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleCreate()">
-            <i class="icon-upload icon-white"></i>
-            Create
-          </button>
+		  <span style="position: relative; display: inline-block;">
+		  	  <ngx-spinner [fullScreen]="false" [name]="CONSTANTS.NEXT_OVERLAY" type="ball-clip-rotate-multiple"
+                    size="medium"></ngx-spinner>
+	          <button *ngIf="page.index > 0" type="button btn btn-primary" [disabled]="disabled" class="btn btn-secondary"
+	            (click)="handleBackPage()">
+	            <i class="icon-upload icon-white"></i>
+	            Back
+	          </button>
+	
+	          <button *ngIf="page.index < (pages.length - 1)" type="button btn btn-primary"
+	            [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleNextPage()">
+	            <i class="icon-upload icon-white"></i>
+	            Next
+	          </button>
+	
+	          <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary"
+	            [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleCreate()">
+	            <i class="icon-upload icon-white"></i>
+	            Create
+	          </button>
+          </span>
         </div>
       </div>
     </div>
