--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -105,6 +105,15 @@
 	                <option value="LOWEST">LOWEST</option>
 	            </select>
 	        </div>
+	        
+	        <div class="form-group">
+	            <label for="radiometricCalibration">Radiometric Calibration</label>
+	            <select [(ngModel)]="config.radiometricCalibration" name="radiometricCalibration" class="form-control" disabled>
+	                <option value="NONE">NONE</option>
+	                <option value="CAMERA">CAMERA</option>
+	                <option value="CAMERA+SUN">CAMERA+SUN</option>
+	            </select>
+	        </div>
 	
 	        <div class="form-group">
 	            <boolean-field [(value)]="config.includeGeoLocationFile"
