--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -73,6 +73,15 @@
 		                <option value="LOWEST">LOWEST</option>
 		            </select>
 		        </div>
+		        
+		        <div *ngIf="config.radiometricCalibration" class="form-group">
+		            <label for="radiometricCalibration">Radiometric calibration</label>
+		            <select [(ngModel)]="config.featureQuality" name="radiometricCalibration" class="form-control" >
+		                <option value="NONE">NONE</option>
+		                <option value="CAMERA">CAMERA</option>
+		                <option value="CAMERA+SUN">CAMERA+SUN</option>
+		            </select>
+		        </div>
 		
 		        <div *ngIf="config.processOrtho || config.processDem" class="form-group">
 		            <boolean-field [(value)]="config.includeGeoLocationFile"
