--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -333,7 +333,7 @@
                 <select [(ngModel)]="values.radiometricCalibration" name="radiometricCalibration" class="form-control">
                   <option value="NONE">NONE</option>
                   <option value="CAMERA">CAMERA</option>
-                  <option value="CAMERA+SUN">CAMERA+SUN</option>
+                  <option value="CAMERA_SUN">CAMERA+SUN</option>
                 </select>
               </div>
 
