chore: added UI support for defining labeled property graph synchronization profiles

--- a/uasdm-ui/src/app/shared/component/header/header.component.html
+++ b/uasdm-ui/src/app/shared/component/header/header.component.html
@@ -90,6 +90,10 @@
               <a class="dropdown-item" routerLink="/site/equipment" routerLinkActive="active">Equipment</a>
             </li>
             <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/lpg-syncs" routerLinkActive="active">Labeled Propery Graphs</a>
+            </li>
+
+            <li *ngIf="admin" role="menuitem">
               <a class="dropdown-item" routerLink="/admin/system-configuration" routerLinkActive="active">
                 <i></i>System Configuration
               </a>
