--- a/uasdm-ui/src/app/shared/component/generic-table/generic-table.component.html
+++ b/uasdm-ui/src/app/shared/component/generic-table/generic-table.component.html
@@ -29,6 +29,8 @@
 					<ng-container *ngIf="col.filter !== false">
 						<input *ngSwitchCase="'URL'" pInputText type="text" placeholder="Filter by URL..."
 							(input)="handleInput(dt, $event.target, col, 'contains')">
+						<input *ngSwitchCase="'LOCALIZED'" pInputText type="text" placeholder="Filter by text..."
+							(input)="handleInput(dt, $event.target, col, 'contains')">
 						<input *ngSwitchCase="'TEXT'" pInputText type="text" placeholder="Filter by text..."
 							(input)="handleInput(dt, $event.target, col, 'contains')">
 						<input *ngSwitchCase="'NUMBER'" pInputText type="number" placeholder="Filter by number..."
@@ -79,6 +81,10 @@
 					</ng-container>
 					<ng-container *ngSwitchCase="'NONE'">
 					</ng-container>
+					<ng-container *ngSwitchCase="'LOCALIZED'">
+						{{rowData[col.field].localizedValue}}
+					</ng-container>
+
 					<ng-container *ngSwitchDefault>
 						{{rowData[col.field]}}
 					</ng-container>
