--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -350,7 +350,7 @@
                 </select>
               </div>
 
-              <div class="form-group" *ngIf="values.includeGeoLocationFile">
+              <div title="Enter the path of the geo location file inside your uploaded zip. This file will be renamed to 'geo.txt' upon upload and used to provide location data for your images." class="form-group" *ngIf="values.includeGeoLocationFile">
                 <label for="geoLocationFileName">Geo location file name</label>
                 <input [(ngModel)]="values.geoLocationFileName" name="geoLocationFileName" type="input"
                   class="form-control" placeholder="File name..." />
