--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -35,7 +35,7 @@
 			    </div>
 		    </div>
 		    
-		    <div class="form-group">
+		    <div *ngIf="odmRun.runEnd" class="form-group">
 			    <label>
 		    		End Time
 		    	</label>
@@ -44,7 +44,7 @@
 			    </div>
 		    </div>
 		    
-		    <div class="form-group">
+		    <div *ngIf="odmRun.runEnd" class="form-group">
 			    <label>
 		    		Total Runtime
 		    	</label>
@@ -143,7 +143,7 @@
     		Output
     	</div>
 	    <div class="panel-body">
-	      <textarea style="color: grey; width: 500px; height: 200px;" [innerHTML]="odmRun.output"></textarea>
+	      <textarea style="color: grey; width: 100%; height: 500px;" [innerHTML]="odmRun.output"></textarea>
 	    </div>
 	</div>
     
@@ -156,9 +156,9 @@
                         class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
                         <span class="ui-button-text">Close</span>
                     </button>
-                    <button type="button" (click)="downloadReport()"
+                    <button *ngIf="odmRun && odmRun.report" type="button" (click)="downloadReport()"
                         class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
-                        <span class="ui-button-text">Download Report</span>
+                        <span class="ui-button-text">Download Quality Report</span>
                     </button>
                 </div>
             </div>
