--- a/uasdm-ui/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-ui/src/app/site/component/sensor/sensor.component.html
@@ -48,6 +48,11 @@
         </select>
       </div>
       <div class="form-group">
+      	<boolean-field [value]="sensor.hasGeologger" (valueChange)="sensor.hasGeologger = $event"
+            [label]="'Has GeoLogger'"
+            [disabled]="mode === 'READ'"></boolean-field>
+      </div>
+      <div class="form-group">
         <label>Pixel Size Width</label>
         <input [(ngModel)]="sensor.pixelSizeWidth" name="pixelSizeWidth" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
       </div>
