feat(upload): better advanced settings styling (refs #243)

--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.css
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.css
@@ -27,3 +27,9 @@
 	color: #155724;
 	background-color: #c3e6cb;
 }
+
+button.btn[aria-expanded="true"] {
+  box-shadow: inset 1px 2px 5px #777;
+  transform: translateY(1px);
+  background: #e5e5e5;
+}
